CLEOMod/x64/Release/CLEOMod.log
  ANDROID_HOME=C:\\Microsoft\AndroidSDK\25
  ANT_HOME=C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Apps\apache-ant-1.9.3
  JAVA_HOME=C:\Program Files\Eclipse Foundation\jdk-8.0.302.8-hotspot
  NDK_ROOT=C:\\Microsoft\AndroidNDK64\android-ndk-r16b
  pch.h
  In file included from C:\Users\danil\Desktop\PC\Projetos\c++\GTA SA MOBILE\test2\GTASA_libGiroflexVSL\CLEOMod/pch.h:26:
C:\Users\danil\Desktop\PC\Projetos\c++\GTA SA MOBILE\test2\GTASA_libGiroflexVSL\CLEOMod/isautils.h(310,74): error : cast from pointer to smaller type 'int' loses information
      inline bool IsWidgetEnabled(CWidgetButton* widget) { return *(bool*)((int)widget + 77); };
                                                                           ^~~~~~~~~~~
C:\Users\danil\Desktop\PC\Projetos\c++\GTA SA MOBILE\test2\GTASA_libGiroflexVSL\CLEOMod/pch.h(44,32): error : no member named 'clamp' in namespace 'std'
      return (unsigned char)std::clamp((int)round(((float)uc) * intensity), 0, 255);
                            ~~~~~^
  2 errors generated.
